// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem /> when the post is mine renders 1`] = `
<div>
  <li
    class="list-none py-6 border-0 border-solid last:border-b-0 flex flex-col"
  >
    <p
      class="border-solid border-0 border-l-2 border-l-teal-500 dark:border-l-yellow-500 pl-4 break-words"
    >
      post
    </p>
    <div
      class="self-end flex gap-4 items-center"
    >
      <div
        class="flex gap-2 h-5"
      >
        <button
          class="items-center rounded border-0 text-white p-2 flex bg-red-500 hover:bg-red-700 dark:bg-red-500 dark:hover:bg-red-700"
        >
          Delete
        </button>
        <button
          class="items-center rounded border-0 text-black dark:text-white p-2 flex bg-gray-200 hover:bg-gray-300 dark:bg-gray-500 dark:hover:bg-gray-600"
        >
          Edit
        </button>
      </div>
      <p
        class="italic text-sm "
      >
        - 
        name
         at 
        01/01/2022 02:00
      </p>
    </div>
  </li>
</div>
`;

exports[`<ListItem /> when the post is not mine renders 1`] = `
<div>
  <li
    class="list-none py-6 border-0 border-solid last:border-b-0 flex flex-col"
  >
    <p
      class="border-solid border-0 border-l-2 border-l-teal-500 dark:border-l-yellow-500 pl-4 break-words"
    >
      post
    </p>
    <div
      class="self-end flex gap-4 items-center"
    >
      <p
        class="italic text-sm "
      >
        - 
        name
         at 
        01/01/2022 02:00
      </p>
    </div>
  </li>
</div>
`;
